feat: add GetContainersWithUsage
