# src/presentation/api/docs/swagger.json
@@ -249,7 +249,7 @@
                 "summary": "UpdateContainer",
                 "parameters": [
                     {
-                        "description": "UpdateContainer (Only accId and containerId are required.)",
+                        "description": "UpdateContainer (Only accountId and containerId are required.)",
                         "name": "updateContainerDto",
                         "in": "body",
                         "required": true,
@@ -447,6 +447,37 @@
                 }
             }
         },
+        "/container/with-usage/": {
+            "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "List containers with usage.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "container"
+                ],
+                "summary": "GetContainersWithUsage",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/dto.ContainerWithUsage"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/container/{accountId}/{containerId}/": {
             "delete": {
                 "security": [
@@ -596,6 +627,62 @@
                 },
                 "scalingThreshold": {
                     "type": "integer"
+                }
+            }
+        },
+        "dto.ContainerWithUsage": {
+            "type": "object",
+            "properties": {
+                "accountId": {
+                    "type": "integer"
+                },
+                "createdAt": {
+                    "type": "integer"
+                },
+                "entrypoint": {
+                    "type": "string"
+                },
+                "envs": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "hostname": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "image": {
+                    "type": "string"
+                },
+                "imageHash": {
+                    "type": "string"
+                },
+                "portBindings": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/valueObject.PortBinding"
+                    }
+                },
+                "privateIp": {
+                    "type": "string"
+                },
+                "profileId": {
+                    "type": "integer"
+                },
+                "resourceUsage": {
+                    "$ref": "#/definitions/valueObject.ContainerResourceUsage"
+                },
+                "restartPolicy": {
+                    "$ref": "#/definitions/valueObject.ContainerRestartPolicy"
+                },
+                "startedAt": {
+                    "type": "integer"
+                },
+                "status": {
+                    "type": "boolean"
                 }
             }
         },
@@ -845,6 +932,41 @@
                     "type": "integer"
                 },
                 "memoryBytes": {
+                    "type": "integer"
+                }
+            }
+        },
+        "valueObject.ContainerResourceUsage": {
+            "type": "object",
+            "properties": {
+                "avgCpuPercent": {
+                    "type": "number"
+                },
+                "currentCpuPercent": {
+                    "type": "number"
+                },
+                "memoryBytes": {
+                    "type": "integer"
+                },
+                "memoryPercent": {
+                    "type": "number"
+                },
+                "netInputBytes": {
+                    "type": "integer"
+                },
+                "netOutputBytes": {
+                    "type": "integer"
+                },
+                "storageInodesCount": {
+                    "type": "integer"
+                },
+                "storageInputBytes": {
+                    "type": "integer"
+                },
+                "storageOutputBytes": {
+                    "type": "integer"
+                },
+                "storageSpaceBytes": {
                     "type": "integer"
                 }
             }
